demo-eks-configuration/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-ops
  name: service-kube-ops-view
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: kube-ops-view
